Fix Vulkan build on Android

Building for Android with Vulkan support previously did not work. There
was some existing Android + Vulkan code which needed a little clean up.

This patch enables Vulkan support on Android builds.

BUG=842302,850725,848375

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I077fe775c7d387e5c65c0024e88421ba47ce6280
Reviewed-on: https://chromium-review.googlesource.com/1110754
Reviewed-by: Brian Salomon <bsalomon@google.com>
Reviewed-by: Min Qin <qinmin@chromium.org>
Reviewed-by: Tobias Sargeant <tobiasjs@chromium.org>
Reviewed-by: Eric Karl <ericrk@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Chris Blume <cblume@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573613}
Former-commit-id: e4264428b06a891e13315d57ffb04532d7c6d7b8